--- a/views/base.pug
+++ b/views/base.pug
@@ -15,3 +15,26 @@ html
                 a.nav__el(href='#') All tours 
             .header_logo 
                 img(src='img/logo-white.png' alt='Natours logo')
+            nav.nav.nav--user
+                //- a.nav__el(href="#") My bookings
+                //- a.nav__el(href="#")
+                //-     img(src='img/iser.jpg' alt='User Photo')
+                //-     span Jonas
+                button.nav__el.nav__el Log in 
+                button.nav__el.nav__el--cta Sign Up
+
+        // CONTENT
+        section.overview 
+            h1= tour 
+
+        // FOOTER
+        footer.footer
+            .footer__logo 
+                img(src='img/logo-green.png' alt='Natour logo')
+            ul.footer__nav 
+                li: a(href="#") About us 
+                li: a(href="#") Download apps
+                li: a(href="#") Become a guide
+                li: a(href="#") Careers
+                li: a(href="#") Contact 
+            p.footer__coyright &copy; by Aung Kyaw Paing.
