--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,6 +1,10 @@
 extends base
 include _reviewCard
 
+block append head
+    script(src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js')
+    link(href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet')
+
 mixin overviewBox(label, text, icon)
     .overview-box__detail
         svg.overview-box__icon
@@ -59,9 +63,6 @@ block content
         each img, i in tour.images 
             .picture-box
                 img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i + 1}`, class=`picture-box__img--${i + 1}`)
-       
-    section.section-map
-        #map
 
     section.section-reviews
         .reviews
